# AIPE

./: .gitignore  README.md
Foundations/Unit-01-Linear-Algebra/: docker-compose.yml  dockerfile
Foundations/Unit-01-Linear-Algebra/notes/: Vector Spaces.md
Foundations/Unit-01-Linear-Algebra/src/: matrix.py  vector.py
Foundations/Unit-01-Linear-Algebra/tests/: test_matrix.py  test_vector.py
Phase 1 - Foundations/Linear Algebra/: docker-compose.yml  dockerfile  requirements.txt
Phase 1 - Foundations/Linear Algebra/cpp/: CMakeLists.txt
Phase 1 - Foundations/Linear Algebra/cpp/src/: vector.hpp
Phase 1 - Foundations/Linear Algebra/cpp/tests/: vector_test.cpp
Phase 1 - Foundations/Linear Algebra/go/: go.mod
Phase 1 - Foundations/Linear Algebra/notebooks/: linear_combinations.ipynb  linear_systems_visualizer.ipynb  lu_efficiency.ipynb  transformation_visualizer.ipynb  vector_visualization.ipynb
Phase 1 - Foundations/Linear Algebra/notes/: Basis and Rank.md  Orthogonality and Projection.md  Vectors.md
Phase 1 - Foundations/Linear Algebra/projects/2D Physics/: physics2D.py
Phase 1 - Foundations/Linear Algebra/projects/Circuits/: circuit.py  components.py  demo.ipynb  examples.py  test_circuit.py
Phase 1 - Foundations/Linear Algebra/typescript/: package-lock.json  package.json
Phase 1 - Foundations/Unit-01-Linear-Algebra/go/: vector.go
Phase 1 - Foundations/Unit-01-Linear-Algebra/notebooks/: transformation_visualizer.ipynb
Phase 1 - Foundations/Unit-01-Linear-Algebra/notes/: Matrices.md
Phase 1 - Foundations/Unit-01-Linear-Algebra/src/: matrix.py
(+6 files in other folders)
